api: add api/v1/overview
This should be a bit more future proof and allow to bundle more
information interesting to the user.
